--- a/.gitignore
+++ b/.gitignore
@@ -203,8 +203,8 @@ UpgradeLog*.XML
 UpgradeLog*.htm
 
 # SQL Server files
-#*.mdf
-#*.ldf
+*.mdf
+*.ldf
 
 # Business Intelligence projects
 *.rdl.data
@@ -243,3 +243,6 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+
+# web config
+web.config
