--- a/Fttx-Orm/Fttx_Orm.csproj
+++ b/Fttx-Orm/Fttx_Orm.csproj
@@ -160,6 +160,7 @@
     <Content Include="Content\dataTable.css" />
     <Content Include="Content\dropdown.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\fullcalendar.min.css" />
     <Content Include="Content\ionicons.min.css" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\multiple-select.css" />
@@ -183,6 +184,7 @@
     <Content Include="Scripts\dataTables.jqueryui.min.js" />
     <Content Include="Scripts\dropdown.js" />
     <Content Include="Scripts\dropdownMultiple.js" />
+    <Content Include="Scripts\fullcalendar.min.js" />
     <Content Include="Scripts\icheck.min.js" />
     <Content Include="Scripts\jquery-2.2.3.min.js" />
     <Content Include="Scripts\jquery-ui.js" />
@@ -190,6 +192,7 @@
     <Content Include="Scripts\jquery.dataTables.min.js" />
     <Content Include="Scripts\jquery.excel.js" />
     <Content Include="Scripts\jszip.min.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\multiple-select.js" />
     <Content Include="Scripts\pdfmake.min.js" />
     <Content Include="Scripts\SelectLeftToRight.js" />
